--- a/_pages/404.md
+++ b/_pages/404.md
@@ -3,6 +3,7 @@ layout: minimal
 title: 404
 subtitle: Page not found
 header_type: none
+excerpt: Page not found
 permalink: /404.html
 ---
 <div class="my-auto text-center">
